Completely reworked container design and configuration