@@ -27,6 +27,18 @@ docker build -t sonarqube ./
 By default, SonarQube supports PostgreSQL, Oracle, MSSQL, MySQL, and an 
 embedded H2 database. You should be able to use any database which 
 has a JDBC driver, but that would require customization of this container.
+After running the container a single time with the H2 driver, the data
+volume will be populated with the defaults and you could then add the JDBC
+driver to <data>/sonar/extensions/jdbc-driver/<dbtype>/<jdbc driver jar file>.
+
+For example, to enable Oracle as the database:
+* Pull/Build the container
+* Run the container using docker-compose and a data volume configured
+* Stop the container
+* Create a directory <data>/sonar/extensions/jdbc-driver/oracle
+* Copy the Oracle JDBC driver to that new directory
+* Update the docker-compose.yaml file to use the appropriate jdbc settings
+* Start the container using docker-compose
 
 ## Quick Start
 
@@ -53,94 +65,120 @@ You may need to adjust the URL above depending on your configuration. Also, upgr
 ## Restarting the SonarQube Service
 
 In order to install/upgrade plugins you need to restart the SonarQube service. You can do so 
-without having to restart the container if desired. Use the __docker exec__ command to enter the running container
-and then issue a __kill -9__ command to force supervisord to restart the service.
+without having to restart the container if desired. Use the __docker exec__ command as follows:
 
-EXAMPLE:
 ```bash
-$ docker ps | grep sonar
-5dc3df48b34c        infosec812/sonarqube:5.0.1   "/bin/sh -c /usr/bin   14 minutes ago      Up 14 minutes       0.0.0.0:9000->9000/tcp                                  sonarqube_sonarqube_1 
-$ docker exec -i -t sonarqube_sonarqube_1 /bin/bash
-$ ps ax | grep java
-   66 ?        Sl     0:01 java -Djava.awt.headless=true -Xms3m -Xmx32m -Djava.library.path=./lib -classpath ../../lib/jsw/wrapper-3.2.3.jar:../../lib/sonar-application-5.0.1.jar -Dwrapper.key=SUsO34i7qsG0udi_ -Dwrapper.port=32000 -Dwrapper.jvm.port.min=31000 -Dwrapper.jvm.port.max=31999 -Dwrapper.pid=64 -Dwrapper.version=3.2.3 -Dwrapper.native_library=wrapper -Dwrapper.cpu.timeout=10 -Dwrapper.jvmid=1 org.tanukisoftware.wrapper.WrapperSimpleApp org.sonar.application.App
-   91 ?        Sl     0:41 /usr/java/jdk1.8.0_20/jre/bin/java -Djava.awt.headless=true -Xmx1G -Xms256m -Xss256k -Djava.net.preferIPv4Stack=true -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+HeapDumpOnOutOfMemoryError -Djava.io.tmpdir=/data/temp -cp ./lib/common/*:./lib/search/* org.sonar.search.SearchServer /tmp/sq-process3534710488578140315properties
-  169 ?        Sl     1:08 /usr/java/jdk1.8.0_20/jre/bin/java -Djava.awt.headless=true -Dfile.encoding=UTF-8 -Djruby.management.enabled=false -Djruby.compile.invokedynamic=false -Xmx768m -XX:MaxPermSize=160m -XX:+HeapDumpOnOutOfMemoryError -Djava.net.preferIPv4Stack=true -Djava.io.tmpdir=/data/temp -cp ./lib/common/*:./lib/server/*:/opt/sonar/lib/jdbc/postgresql/postgresql-9.3-1101-jdbc4.jar org.sonar.server.app.WebServer /tmp/sq-process3177121203749324429properties
-  303 ?        S+     0:00 grep --color=auto java
-$ kill -9 66 91 169
-$ supervisorctl stop sonarqube
-$ supervisorctl start sonarqube
-$ exit
+docker exec -it sonarqube_sonarqube_1 /usr/bin/restart
 ```
 
 ## Configuration Environment Variables
 
 None of the options below are 'required', but without some of them, the data stored will be lost every time the container is restarted. All default values are listed in parenthesis.
 
-* __SONAR_CONTEXT__ (/)
-  * The context path for the web application (Defaults to '/')
-* __SONAR_WEB_JAVA_OPTS__ (-Xmx768m -XX:MaxPermSize=160m -XX:+HeapDumpOnOutOfMemoryError)
-  * The JAVA_OPTS for the web application
-* __SONAR_WEB_ADDL_OPTS__ (NULL)
-  * Uses the default or provided JAVA_OPTS for the web application and appends these
-* __SONAR_WEB_PORT__ (9000)
-  * Port on which the web application will listen for incoming requests
-* __SONAR_WEB_MAX_THREADS__ (50)
-  * Maximum number of threads for the web application
-* __SONAR_WEB_MIN_THREADS__ (5)
-  * Minimum number of threads for the web application
-* __SONAR_WEB_QUEUE__ (25)
-  * Maximum number of queued requests for the web application
-* __SONAR_ACCESS_LOGS__ (NULL/Disabled)
-  * Enable HTTP access logs
-* __SONAR_SEARCH_JAVA_OPTS__ (-Xmx1G -Xms256m -Xss256k -Djava.net.preferIPv4Stack=true -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+HeapDumpOnOutOfMemoryError)
-  * JAVA_OPTS for the Elastic Search application
-* __SONAR_SEARCH_ADDL_OPTS__ (NULL/Disabled)
-  * Uses the default or provided JAVA_OPTS for Elastic Search and appends these
-* __SONAR_SEARCH_PORT__ (9001)
-  * The port on which Elastic Search should listen for connections
-* __SONAR_DISABLE_UPDATES__ (NULL/Enabled)
-  * Disable SonarSource update checking
-* __SONAR_PROXY_HOST__ (NULL/Disabled)
-  * HTTP Proxy host for accessing the Internet
-* __SONAR_PROXY_PORT__ (NULL/Disabled)
-  * HTTP Proxy host for accessing the Internet
-* __SONAR_SOCKS_PROXY_HOST__ (NULL/Disabled)
-  * SOCKS Proxy host for accessing the Internet
-* __SONAR_SOCKS_PROXY_PORT__ (NULL/Disabled)
-  * SOCKS Proxy host for accessing the Internet
-* __SONAR_PROXY_NTLM_DOMAIN__ (NULL/Disabled)
-  * If set, the NTLM domain to use to authenticate to an NTLM authenticated proxy server
-* __SONAR_PROXY_USER__ (NULL/Disabled)
-  * The username with which to authenticate to the proxy
-* __SONAR_PROXY_PASS__ (NULL/Disabled)
-  * The password with which to authenticate to the proxy
-* __SONAR_LOG_LEVEL__ (NONE)
-  * The logging level (one of NONE, BASIC, FULL)
-* __SONAR_EXPOSE_ELASTIC_SEARCH__ (NULL/Disabled)
-  * The port on which Elastic Search should allow HTTP access
-* __DB_HOST__ (127.0.0.1)
-  * The host which runs the database for SonarQube
-* __DB_PORT__ (9092)
-  * The port on which the database listens for connections
-* __DB_NAME__ (sonar)
-  * The name of the database which SonarQube will use
-* __DB_USER__ (sonar)
-  * The username with which to authenticate to the database
-* __DB_PASS__ (sonar)
-  * The password with which to authenticate to the database
-* __DB_TYPE__ (embedded)
-  * The type of database which SonarQube will use (One of embedded,h2,postgresql,mysql,oracle,sqlserver)
-* __SONAR_DB_MAX_ACTIVE__ (50)
-  * Maximum number of db connections allowed
-* __SONAR_DB_MAX_IDLE__ (5)
-  * Maximum number of idle DB connections
-* __SONAR_DB_MIN_IDLE__ (2)
-  * Minimum number of spare idle DB connections
-* __SONAR_DB_MAX_WAIT__ (5000)
-  * Maximum amount of time to wait for a database operation (in milliseconds)
-* __SONAR_DB_MIN_EVICT__ (600000)
-  * Minimum time a connection must be idle before being considered for eviction from the connection pool (in milliseconds)
-* __SONAR_DB_EVICT_INTERVAL__ (30000)
-  * The interval at which the connection pool will consider evicting idle connections (in milliseconds)
-* __SONAR_DATA_DIR__ (/data)
-  * The path to the mounted docker volume where persistent data should be stored
+* sonar.jdbc.username=sonar
+  * The username for authenticating to the database
+* sonar.jdbc.password=sonar
+  * The password for authenticating to the database
+* sonar.jdbc.url=jdbc:h2:tcp://localhost:9092/sonar
+  * The JDBC URL for the database
+* sonar.embeddedDatabase.port=9092
+  * Port on which to run the embedded H2 database engine (if desired)
+* sonar.jdbc.maxActive=50
+  * Maximum number of pooled database connections
+* sonar.jdbc.maxIdle=5
+  * Minimum number of pooled database connections
+* sonar.jdbc.minIdle=2
+  * Minimum number of idle database connections in the pool
+* sonar.jdbc.maxWait=5000
+  * Maximum amount of time to wait for a database interaction to complete
+* sonar.jdbc.minEvictableIdleTimeMillis=600000
+  * Minumum amount of time a database connection must be idle before being evicted from the connection pool
+* sonar.jdbc.timeBetweenEvictionRunsMillis=30000
+  * Amount of time to wait between eviction polls
+* sonar.web.javaOpts=-Xmx768m -XX:MaxPermSize=160m -XX:+HeapDumpOnOutOfMemoryError
+  * JVM options for the web application
+* sonar.web.javaAdditionalOpts=
+  * Additional JVM options for the web application
+* sonar.web.host=0.0.0.0
+  * The address on which the web server will bind to listen for requests
+* sonar.web.context=
+  * The web server path on which to bind (Ex: /sonar)
+* sonar.web.port=9000
+  * The port on which to bind the web server listener (If this is changed, you must also change the exposed port for the container)
+* sonar.web.https.port=-1
+  * The web server's HTTPS port (If used, you must expose the HTTPS port and install the keystore)
+* sonar.web.https.keyAlias=
+  * The name of the key in the keystore to use for SSL
+* sonar.web.https.keyPass=changeit
+  * The password for the key inside of the keystore
+* sonar.web.https.keystoreFile=
+  * The path to the keystore file
+* sonar.web.https.keystorePass=
+  * The password for the keystore file
+* sonar.web.https.keystoreType=JKS
+  * The type of the keystore file (JKS, PKCS12)
+* sonar.web.https.keystoreProvider=
+  * The name of the keystore provider
+* sonar.web.https.truststoreFile=
+  * The path to the keystore which contains the trusted certs
+* sonar.web.https.truststorePass=
+  * The password for the keystore file
+* sonar.web.https.truststoreType=JKS
+  * The type of the keystore file (JKS, PKCS12)
+* sonar.web.https.truststoreProvider=
+  * The name of the keystore provider
+* sonar.web.https.clientAuth=false
+  * Enable SSL certificate authentication
+* sonar.web.https.ciphers=
+  * Allowed ciphers (Defaults are set by the version of the JVM being used)
+* sonar.web.http.maxThreads=50
+  * Maximum number of HTTP threads
+* sonar.web.https.maxThreads=50
+  * Maximum number of HTTPS threads
+* sonar.web.http.minThreads=5
+  * Minimum number of HTTP threads
+* sonar.web.https.minThreads=5
+  * Minimum number of HTTPS threads
+* sonar.web.http.acceptCount=25
+  * Maximum number of queued requests to accept before denying new requests via HTTP
+* sonar.web.https.acceptCount=25
+  * Maximum number of queued requests to accept before denying new requests via HTTPS
+* sonar.ajp.port=-1
+  * Port on which to bind for use with Apache Java bridge
+* sonar.search.javaOpts=-Xmx1G -Xms256m -Xss256k -Djava.net.preferIPv4Stack=true \
+  * JVM options for running the embedded ElsticSearch instance
+* sonar.search.javaAdditionalOpts=
+  * Additional JVM options for running the embedded ElsticSearch instance
+* sonar.search.port=9001
+  * Port on which the ElasticSearch instance will bind
+* sonar.updatecenter.activate=true
+  * Enable/Disable the UpdateCenter  
+* sonar.log.level=INFO
+  * Log leve (FATAL, ERROR, WARN, INFO, DEBUG, TRACE)
+* sonar.path.logs=logs
+  * Directory path where logs will be stored
+* sonar.log.rollingPolicy=time:yyyy-MM-dd
+  * based on time if value starts with "time:", for example by day ("time:yyyy-MM-dd") or by month ("time:yyyy-MM")
+  * based on size if value starts with "size:", for example "size:10MB"
+  * disabled if value is "none".  That needs logs to be managed by an external system like logrotate
+* sonar.log.maxFiles=7
+  * Maximum number of files to keep if a rolling policy is enabled
+* sonar.web.accessLogs.enable=true
+  * Access log is the list of all the HTTP requests received by server. If enabled, it is stored in the file {sonar.path.logs}/access.log
+* sonar.web.accessLogs.pattern=combined
+  * Format of access log. It is ignored if sonar.web.accessLogs.enable=false
+    * "common" is the Common Log Format (shortcut for: %h %l %u %user %date "%r" %s %b)
+    * "combined" is another format widely recognized (shortcut for: %h %l %u [%t] "%r" %s %b "%i{Referer}" "%i{User-Agent}")
+    * else a custom pattern. See http://logback.qos.ch/manual/layouts.html#AccessPatternLayout
+* sonar.notifications.delay=60
+  * Delay in seconds between processing of notification queue. Default is 60 seconds.
+* sonar.path.data=data
+  * Path to persistent data directory (embedded database and search index) and temporary files. Can be absolute or relative to installation directory.
+* sonar.path.temp=temp
+  * Path to persistent temp directory (embedded database and search index) and temporary files. Can be absolute or relative to installation directory.
+* sonar.web.dev=false
+  * Dev mode allows to reload web sources on changes and to restart server when new versions of plugins are deployed.
+* sonar.web.dev.sources=/path/to/server/sonar-web/src/main/webapp
+  * Path to webapp sources for hot-reloading of Ruby on Rails, JS and CSS (only core, plugins not supported).
+* sonar.search.httpPort=9010
+  * Uncomment to enable the Elasticsearch HTTP connector, so that ES can be directly requested through http://lmenezes.com/elasticsearch-kopf/?location=http://localhost:9010
